feat(CAT-FR-GD-08): resolve pr feedback