@@ -1067,17 +1067,17 @@ public class Neo4jGraphStoreTest {
 
     @Test
     void addClaims_withKnownCredentialSubject_setsClaimsGraphUriToCredentialSubject() {
-        String credentialSubject = "http://example.org/testZ_credSubject1";
-        List<SdClaim> sdClaimList = Arrays.asList(
+        String credentialSubject = "http://example.org/credSubject1";
+        List<SdClaim> sdClaimList = List.of(
                 new SdClaim(
-                        "<http://example.org/testZ_node1>",
+                        "<http://example.org/node1>",
                         "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
                         "<http://w3id.org/gaia-x/service#ServiceOffering>"
                 ),
                 new SdClaim(
-                        "<http://example.org/testZ_node1>",
-                        "<http://example.org/testZ_name>",
-                        "\"TestZ Service\""
+                        "<http://example.org/node1>",
+                        "<http://example.org/name>",
+                        "\"Test Service\""
                 )
         );
 
@@ -1096,7 +1096,6 @@ public class Neo4jGraphStoreTest {
                 Object uris = row.get("uris");
                 Assertions.assertNotNull(uris, "claimsGraphUri should not be null");
                 Assertions.assertInstanceOf(List.class, uris, "claimsGraphUri should be a list");
-                @SuppressWarnings("unchecked")
                 List<String> uriList = (List<String>) uris;
                 Assertions.assertTrue(uriList.contains(credentialSubject),
                         "claimsGraphUri array should contain the credential subject used in addClaims");
@@ -1108,29 +1107,28 @@ public class Neo4jGraphStoreTest {
 
     @Test
     void deleteClaims_multipleCredentialsShareNode_deleteOneLeavesOther() {
-        String credC = "http://example.org/testZ_credC";
-        String credD = "http://example.org/testZ_credD";
+        String credC = "http://example.org/credC";
+        String credD = "http://example.org/credD";
 
         // Both credentials share the same subject node
         SdClaim sharedClaim = new SdClaim(
-                "<http://example.org/testZ_sharedNode>",
+                "<http://example.org/sharedNode>",
                 "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>",
                 "<http://w3id.org/gaia-x/service#ServiceOffering>"
         );
 
         try {
-            graphGaia.addClaims(Collections.singletonList(sharedClaim), credC);
-            graphGaia.addClaims(Collections.singletonList(sharedClaim), credD);
+            graphGaia.addClaims(List.of(sharedClaim), credC);
+            graphGaia.addClaims(List.of(sharedClaim), credD);
 
             // Query the shared node by its URI and check claimsGraphUri contains both
             GraphQuery queryBoth = new GraphQuery(
                     "MATCH (n {uri: $uri}) RETURN n.claimsGraphUri AS uris",
-                    Map.of("uri", "http://example.org/testZ_sharedNode"));
+                    Map.of("uri", "http://example.org/sharedNode"));
             List<Map<String, Object>> resultsBoth = graphGaia.queryData(queryBoth).getResults();
 
             Assertions.assertEquals(1, resultsBoth.size(),
                     "There should be exactly one node for the shared URI");
-            @SuppressWarnings("unchecked")
             List<String> urisBoth = (List<String>) resultsBoth.getFirst().get("uris");
             Assertions.assertTrue(urisBoth.contains(credC),
                     "claimsGraphUri should contain credC");
@@ -1144,7 +1142,6 @@ public class Neo4jGraphStoreTest {
             List<Map<String, Object>> resultsAfter = graphGaia.queryData(queryBoth).getResults();
             Assertions.assertEquals(1, resultsAfter.size(),
                     "Shared node should still exist after deleting one credential");
-            @SuppressWarnings("unchecked")
             List<String> urisAfter = (List<String>) resultsAfter.getFirst().get("uris");
             Assertions.assertFalse(urisAfter.contains(credC),
                     "credC should no longer be in claimsGraphUri after deletion");
